test/files/errors/modfloat.jg
_main int ()
{
    m int = 0;

    m %= 1.4; # Error
}